Bug 1362969 - Flush MediaCodec only when necessary. r=esawin, a=lizzard

MozReview-Commit-ID: FgfEnqwnZ58